# Compass_Apache_TVM

./: CMakeLists.txt  README.osc.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
.github/: README.md
_sources/: index.rst.txt
_sources/explanation/: about_this_doc.md.txt
_sources/getting_started/: introduction.md.txt
_sources/getting_started/tutorials/: 2_dynamic_add.md.txt  3_reduce_op.md.txt  4_lut_op.md.txt  5_quantization_op.md.txt
_sources/how_to_guides/: how_to_use_inline_assembly.md.txt  how_to_use_rpc.md.txt
_sources/language_basics/: mask.md.txt  types.md.txt
_sources/reference/: script_api.rst.txt
_sources/reference/ir/: arithmetic.rst.txt  bitwise.rst.txt  compare.rst.txt  permutation.rst.txt
aipu/cmake/: AIPU.cmake
aipu/docs/: fqa.md  index.rst  pipeline.md  rpc.md  source_development_guide.md  supporting_bare_metal.md
aipu/docs/dsl/: conf.py
aipu/include/aipu/: utils.h
aipu/microtvm/: CMakeLists.txt
aipu/microtvm/convert/: astyle.sh  bin2arr.py  bin2src_all.sh
aipu/microtvm/include/: aipu_driver_wrapper.h  crt_config.h
aipu/microtvm/src/: aipu_driver_wrapper.c  main.c  platform.c
aipu/src/: utils.cc
aipu/src/ir/: source_map.cc
aipu/src/runtime/: execution_engine.cc  packed_func_module.cc
aipu/tests/: __init__.py
aipu/tests/data/: caffe_erfnet.cfg  caffe_mtcnn_o.cfg  caffe_mtcnn_p.cfg  caffe_mtcnn_r.cfg  caffe_peleenet.cfg  onnx_yolo_v2_416.cfg  relay_tiny.cfg  relay_tiny.rly  tf_alexnet.cfg  tf_facenet.cfg  tf_inception_resnet_v2.cfg  tf_mobilenet_v2.cfg  tf_resnet_v1_101.cfg  tf_resnet_v1_50.cfg  tf_shufflenet_v2.cfg  tf_vgg_19.cfg  tf_wavenet.cfg
aipu/tests/python/: __init__.py  conftest.py
aipu/tests/python/unittest/cpp/deploy/: CMakeLists.txt  cpp_deploy.cc  dmabuf_deploy.cc  pipeline_deploy.cc
cmake/: config.cmake
cmake/utils/: FindLLVM.cmake  Linker.cmake
compass/cmake/: compass.cmake
compass/docs/: fqa.md  index.rst  rpc.md  source_development_guide.md
compass/docs/dsl/: Makefile  conf.py  index.rst
compass/src/relax/: config.cc
compass/src/runtime/: basic_config.cc  driver.cc  execution_engine.cc  mlc_llm.cc  module.cc  packed_func_module.cc
compass/tests/: __init__.py
compass/tests/data/: onnx_mobilenet_v2_ssd.cfg  relax_tiny.cfg  relax_tiny.rlx  tf_deeplab_v3.cfg  tf_inception_v3.cfg  tf_inception_v4.cfg  tf_resnet_v1_101.cfg  tf_resnet_v1_50.cfg  tf_shufflenet_v2.cfg  tf_vgg_16.cfg
compass/tests/python/: conftest.py
compass/tests/python/unittest/cpp/deploy/: CMakeLists.txt  cpp_deploy.cc
docs/: Doxyfile  Makefile  conf.py  index.rst
explanation/: about_this_doc.html  compass_dsl.html  pysim.html  static_and_dynamic_kernel.html  zhouyi_npu_arch.html
ffi/src/ffi/: container.cc  dtype.cc
getting_started/: build_and_run_workflow.html  installation.html  introduction.html
getting_started/tutorials/: 0_quick_start.html  1_static_add.html  2_dynamic_add.html  3_reduce_op.html  4_lut_op.html  5_quantization_op.html  index.html
how_to_guides/: how_to_debug_with_python.html  how_to_use_aiff.html  how_to_use_dma.html  how_to_use_inline_assembly.html  how_to_use_macros.html  how_to_use_mask.html  how_to_use_pointer.html  how_to_use_profiler.html  how_to_use_rpc.html  how_to_use_subfunctions.html  how_to_write_a_basic_kernel.html  how_to_write_the_operator_plugin.html
include/tvm/arith/: analyzer.h
include/tvm/relax/: dataflow_pattern.h  dataflow_pattern_functor.h
include/tvm/runtime/: c_runtime_api.h  data_type.h  device_api.h  module.h  ndarray.h  serializer.h
include/tvm/te/: schedule.h
include/tvm/tir/: aipuexpr.h  builtin.h  expr.h  expr_functor.h  op.h  stmt.h
language_basics/: expression.html  flexible_width_and_multiple_width_vector.html  functions.html  index.html  mask.html  statement.html  types.html  variables.html
python/tvm/: __init__.py
python/tvm/_ffi/: runtime_ctypes.py
python/tvm/aipu/: __init__.py  error.py  logger.py  testing.py  utils.py
python/tvm/compass/: __init__.py  _ffi_api.py  compass_info.py  logger.py  testing.py  utils.py
python/tvm/contrib/: compass_pipeline_executor.py  pipeline_executor.py
python/tvm/exec/: rpc_server.py
python/tvm/ffi/: container.py  dtype.py
python/tvm/ir/: container.py  module.py
python/tvm/relay/: __init__.py  expr.py
python/tvm/rpc/: client.py  server.py
python/tvm/runtime/: __init__.py  module.py  ndarray.py  object_generic.py  profiler_vm.py  vm.py
python/tvm/te/: __init__.py  schedule.py
python/tvm/testing/: utils.py
python/tvm/tir/: __init__.py  buffer.py  expr.py  expr_functor.py  function.py  op.py  pointer.py  stmt.py  stmt_functor.py
python/tvm/topi/: __init__.py  math.py
reference/: script_api.html
reference/ir/: arithmetic.html  bitwise.html  compare.html  conversion.html  index.html  math.html  memory.html  miscellaneous.html  permutation.html  synchronization.html
src/arith/: analyzer.cc  canonical_simplify.cc  const_fold.h  detect_linear_equation.cc  int_set.cc  rewrite_simplify.cc  rewrite_simplify.h
src/driver/: driver_api.cc
src/ir/: module.cc  op.cc
src/node/: attr_registry.h
src/relax/ir/: dataflow_matcher.cc  dataflow_matcher.h  dataflow_pattern.cc  dataflow_pattern_functor.cc
src/relax/transform/: fold_constant.cc  fuse_ops.cc
src/relay/analysis/: util.cc
src/relay/backend/: te_compiler_cache.cc
src/relay/ir/: dataflow_matcher.cc
src/relay/printer/: relay_text_printer.cc  text_printer.h
src/relay/transforms/: annotate_target.cc  fake_quantization_to_integer.cc  fold_explicit_padding.cc  fold_scale_axis.cc  partition_graph.cc  pattern_utils.h  simplify_expr.cc
src/runtime/: container.cc  module.cc  ndarray.cc  thread_storage_scope.h
src/runtime/cuda/: cuda_common.h  cuda_device_api.cc
src/runtime/graph_executor/: graph_executor.cc
src/runtime/pipeline/: pipeline_executor.cc  pipeline_executor.h  pipeline_scheduler.cc  pipeline_scheduler.h  pipeline_struct.h
src/topi/: nn.cc  transform.cc
tests/lint/: check_file_type.py  git-black.sh  pylintrc
tests/scripts/: setup-pytest-env.sh  task_python_docs.sh
(+1109 files in other folders)
